add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE main.cpp core/app.cpp core/app.h core/SDL_event_manager.cpp core/SDL_event_manager.h events/event.cpp events/event.h level/level_generator.cpp level/level_generator.h rendering/render_manager.cpp rendering/render_manager.h rendering/camera.cpp rendering/camera.h components/component.cpp components/component.h components/renderer.cpp components/renderer.h components/game_object.h components/world_object.cpp components/world_object.h components/transform.cpp components/transform.h util/common.h input/input_manager.cpp input/input_manager.h)

target_link_libraries(${PROJECT_NAME} PRIVATE external)